# EcoScan

./: .env.development  .env.init  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy-dev.yml  deploy.yml
docs/: ARCHITECTURE.md
infrastructure/: README.md  deploy.sh  template.yaml
infrastructure/backend/: README.md  deploy.sh  openapi.yaml  packaged.yaml  template.yaml
infrastructure/lambda/: updateBinStatus.js
infrastructure/templates/: master-template.yml
lambda/: .gitignore  Cargo.toml  README.md  build.sh
lambda/src/: config.rs  error.rs  lib.rs  main.rs  models.rs
lambda/src/application/: mod.rs
lambda/src/domain/: mod.rs
lambda/src/infrastructure/: dynamodb.rs
public/: index.html  manifest.json
scripts/: build-lambda.sh  init-localstack.sh  test-lambda.sh
services/: Cargo.toml
services/bin-status-reporter/: Cargo.toml  README.md  template.yaml
services/bin-status-reporter/src/: error.rs  lib.rs  main.rs
services/bin-status-reporter/src/application/: mod.rs
services/bin-status-reporter/src/domain/: mod.rs
services/bin-status-reporter/src/infrastructure/: dynamodb.rs  mod.rs  test_utils.rs
services/bin-status-reporter/test-events/: update-status-50-percent.json  update-status-70-percent.json  update-status-empty.json  update-status-full.json
services/shared/: Cargo.toml
services/shared/src/: domain.rs  dto.rs  lib.rs  utils.rs
src/: App.tsx  aws-exports.ts  index.tsx  reportWebVitals.ts
src/components/Auth/: ProtectedRoute.tsx
src/components/Layout/: Layout.tsx
src/components/Map/: AddressSearch.tsx  Map.tsx
src/components/QRCode/: QRCodeGenerator.tsx
src/components/TrashBin/: BinStatusReporter.tsx
src/config/: aws-config.ts
src/context/: AuthContext.tsx  MapContext.tsx
src/hooks/: useAuth.ts  useLocations.ts  useMapLocation.ts  useQRCodes.ts  useTrashBins.ts
src/pages/: BinStatusPage.tsx  NotFound.tsx
src/pages/admin/: Dashboard.tsx
src/pages/auth/: Login.tsx
src/services/: api.ts
src/styles/: index.css
src/types/: aws-amplify.d.ts  google-maps.d.ts  index.ts  qrcode-react.d.ts  react-google-maps.d.ts
