[package]
name = "ecoscan-lambda"
version = "0.1.0"
edition = "2021"
description = "Lambda functions for EcoScan CZ trash bin monitoring system"

[dependencies]
lambda_runtime = { version = "0.8.3" }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws_lambda_events = "0.11.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"

[workspace]
resolver = "2"

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
