[workspace]
resolver = "2"
members = [
    "bin-status-reporter"
    # Temporarily disabled until implemented:
    # "admin-dashboard-api",
    # "notifier",
    # "shared"
]

[workspace.dependencies]
# Common dependencies for all services
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lambda_runtime = "0.8"
lambda-web = "0.2"
aws-sdk-dynamodb = "1.0"
aws-config = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
