[package]
name = "bin-status-reporter"
version = "0.1.0"
edition = "2021"
description = "Lambda function for EcoScan CZ trash bin status reporting"

[dependencies]
lambda_runtime = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
aws_lambda_events = "0.11.0"
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true, features = ["test-util"] }
async-trait = "0.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
