[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-config = { workspace = true }
